--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -23,7 +23,7 @@ a:hover {
     position: fixed;
     height: 96px;
 
-    @media screen and (min-width: $smallDesktop) {
+    @media screen and (min-width: $largeDesktop) {
         height: 136px;
     }
 
@@ -53,7 +53,7 @@ a:hover {
         flex: 1;
         
 
-        @media (min-width: $smallDesktop) {
+        @media (min-width: $largeDesktop) {
             justify-content: flex-end;
             flex: 1 28%;
             margin-right: -28px;
@@ -61,7 +61,7 @@ a:hover {
     }
 
     &__right {
-        @media (min-width: $smallDesktop) {
+        @media (min-width: $largeDesktop) {
             display: flex;
             justify-content: flex-end;
             flex: 1 28%;
@@ -101,7 +101,7 @@ a:hover {
         position: absolute;
         bottom: 140px;
 
-        @media screen and (min-width: $smallDesktop) {
+        @media screen and (min-width: $largeDesktop) {
             display: none;
         }
     }
@@ -285,7 +285,7 @@ a:hover {
     cursor: pointer;
 }
 
-@media (max-width: $smallDesktop) {
+@media (max-width: 1024px) {
     .navbar {
         &__right ul {
             display: none;
